--- a/fe/view/forms.html
+++ b/fe/view/forms.html
@@ -1,15 +1,15 @@
-<div ui-content-for="title">
+<!--<div ui-content-for="title">
   <span>Forms</span>
 </div>
-
+-->
 <div class="scrollable">
  <div class="scrollable-content section">
    
   <form role="form" ng-submit='login()'>
     <fieldset>
-      <legend>Login</legend>
+      <legend>登陆</legend>
         <div class="form-group has-success has-feedback">
-          <label>Email</label>
+          <label>邮箱</label>
           <input type="email"
                  ng-model="email"
                  class="form-control"
@@ -17,16 +17,19 @@
         </div>
 
         <div class="form-group">
-          <label>Password</label>
+          <label>密码</label>
           <input type="password" 
                  class="form-control"
                  placeholder="Password">
         </div>
 
         <div class="form-group">
+		  <a href="">忘记密码</a>
+		  <!--
           <label>Remember Me</label>
           <ui-switch 
             ng-model="rememberMe"></ui-switch>
+		  -->
         </div>
     </fieldset>
     <hr>
@@ -34,11 +37,11 @@
     <button class="btn btn-primary btn-block">
       Login
     </button>
-
+<!--
     <div ui-content-for="navbarAction">
       <a class="btn" ng-click="login()">Login</a>
     </div>
-
+-->
   </form>
  </div>
 </div>
