--- a/fe/view/home.html
+++ b/fe/view/home.html
@@ -3,8 +3,7 @@
 
     <div class="list-group text-center">
       <div class="list-group-item list-group-item-home">
-        <h1>Mobile Angular UI
-        Coach <small>1.3</small>
+        <h1>Mobile Angular UI <small>1.3</small>
         </h1>
       </div>
       <div class="list-group-item list-group-item-home">
@@ -49,8 +48,9 @@
             </p>
 <pre>{{userAgent}}</pre>
             <p>
-              It would help a lot!
+              It would help a lot!  
             </p>
+			<a href="tel:17717583504">17717583504</a>
         </div>
       </div>
 
