--- a/fe/view/index.html
+++ b/fe/view/index.html
@@ -27,8 +27,8 @@
     ui-prevent-touchmove-defaults
     >
 
-    <!-- Sidebars -->
-    <div ng-include="'sidebar.html'" ng-show="loggedIn"
+    <!-- Sidebars --> <!--ng-show="loggedIn"-->
+    <div ng-include="'sidebar.html'"
             ui-track-as-search-param="true"
             class="sidebar sidebar-left"></div>
 
@@ -46,7 +46,7 @@
           学车这件事儿
         </div>
         <div class="btn-group pull-left">
-          <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle" ng-show="loggedIn">
+          <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle"> <!--ng-show="loggedIn"-->
             <i class="fa fa-bars"></i> 菜单			
           </div>
         </div>
@@ -62,7 +62,7 @@
       <div class="navbar navbar-app navbar-absolute-bottom">
 	    <div class="btn-group justified">
             <a href="#/home" class="btn btn-navbar btn-icon-only"><i class="fa fa-home fa-navbar"></i></a>
-            <a class="btn btn-navbar btn-icon-only" ng-click="logout()" ng-hide="loggedIn"><i class="fa fa-user-plus fa-navbar"></i></a>
+            <a class="btn btn-navbar btn-icon-only" ng-click="userplus()" ng-hide="loggedIn"><i class="fa fa-user-plus fa-navbar"></i></a>
             <a class="btn btn-navbar btn-icon-only" ng-click="logout()" ng-show="loggedIn"><i class="fa fa-sign-out fa-navbar"></i></a>
         </div>
 		<!--
