--- a/fe/view/index.html
+++ b/fe/view/index.html
@@ -47,14 +47,14 @@
         </div>
         <div class="btn-group pull-left">
           <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle"> <!--ng-show="loggedIn"-->
-            <i class="fa fa-bars"></i> 菜单			
+            <i class="fa fa-bars"></i> 菜单
           </div>
         </div>
         <div class="btn-group pull-right" ui-yield-to="navbarAction">
 		  <!--
 		  -->
           <div ui-toggle="uiSidebarRight" class="btn sidebar-right-toggle">
-            <i class="fa fa-users"></i> 教练
+            <i class="fa fa-users"></i> <span ng-hide="isCoach">教练</span><span ng-show="isCoach">学员</span>
           </div>
         </div>
       </div>
@@ -62,7 +62,7 @@
       <div class="navbar navbar-app navbar-absolute-bottom">
 	    <div class="btn-group justified">
             <a href="#/home" class="btn btn-navbar btn-icon-only"><i class="fa fa-home fa-navbar"></i></a>
-            <a class="btn btn-navbar btn-icon-only" ng-click="userplus()" ng-hide="loggedIn"><i class="fa fa-user-plus fa-navbar"></i></a>
+            <a href="#/adduser" class="btn btn-navbar btn-icon-only" ng-click="userplus()" ng-hide="loggedIn"><i class="fa fa-user-plus fa-navbar"></i></a>
             <a class="btn btn-navbar btn-icon-only" ng-click="logout()" ng-show="loggedIn"><i class="fa fa-sign-out fa-navbar"></i></a>
         </div>
 		<!--
@@ -76,7 +76,7 @@
 
       <!-- App Body -->
       <div class="app-body"> <!-- ng-class="{loading: loading}"-->
-		<!-- 
+		<!--
 		-->
         <div ng-show="loading" class="app-content-loading">
           <i class="fa fa-spinner fa-spin loading-spinner"></i>
