--- a/fe/view/adduser.html
+++ b/fe/view/adduser.html
@@ -33,6 +33,13 @@
         </div>
 
         <div class="form-group">
+          <label>报考级别</label>
+          <select ng-model="selectedExamLevel" class="selectpicker form-control"
+                  ng-options="examlevel.name for examlevel in examlevels track by examlevel.id">
+          </select>
+        </div>
+
+        <div class="form-group">
           <label>选择教练</label>
           <select ng-model="selectedCoach" class="selectpicker form-control"
                   ng-options="coach.name for coach in coachs track by coach.id">
@@ -47,7 +54,7 @@
         </div>
 
         <div class="form-group">
-          <label>邮箱</label>
+          <label>姓名</label>
           <input type="text"
                  ng-model="name"
                  class="form-control"
@@ -60,13 +67,6 @@
                  ng-model="email"
                  class="form-control"
                  placeholder="Email">
-        </div>
-
-        <div class="form-group">
-          <label>报考级别</label>
-          <select ng-model="selectedExamLevel" class="selectpicker form-control"
-                  ng-options="examlevel.name for examlevel in examlevels track by examlevel.id">
-          </select>
         </div>
       </fieldset>
       <hr>
