--- a/fe/view/adduser.html
+++ b/fe/view/adduser.html
@@ -13,7 +13,7 @@
           <input type="tel"
                  ng-model="telephone"
                  class="form-control"
-                 placeholder="Telephone">
+                 placeholder="手机号码">
         </div>
 
         <div class="form-group">
@@ -21,7 +21,7 @@
           <input type="password"
                  ng-model="password"
                  class="form-control"
-                 placeholder="Password">
+                 placeholder="密码">
         </div>
 
         <div class="form-group">
@@ -29,7 +29,7 @@
           <input type="password"
                  ng-model="repassword"
                  class="form-control"
-                 placeholder="Password">
+                 placeholder="确认密码">
         </div>
 
         <div class="form-group">
@@ -58,7 +58,7 @@
           <input type="text"
                  ng-model="name"
                  class="form-control"
-                 placeholder="Name">
+                 placeholder="姓名">
         </div>
 
         <div class="form-group">
@@ -72,7 +72,7 @@
       <hr>
 
       <button class="btn btn-primary btn-block">
-        Login
+        注册
       </button>
       <!--
           <div ui-content-for="navbarAction">
