--- a/fe/view/index.html
+++ b/fe/view/index.html
@@ -46,15 +46,13 @@
           学车这件事儿
         </div>
         <div class="btn-group pull-left">
-          <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle"> <!--ng-show="loggedIn"-->
+          <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle" ng-show="loggedIn"> <!-- -->
             <i class="fa fa-bars"></i> 菜单
           </div>
         </div>
         <div class="btn-group pull-right" ui-yield-to="navbarAction">
-		  <!--
-		  -->
-          <div ui-toggle="uiSidebarRight" class="btn sidebar-right-toggle">
-            <i class="fa fa-users"></i> <span ng-hide="isCoach">教练</span><span ng-show="isCoach">学员</span>
+          <div ui-toggle="uiSidebarRight" class="btn sidebar-right-toggle" ng-show="loggedIn"> <!-- -->
+            <i class="fa fa-users"></i> 人员
           </div>
         </div>
       </div>
