--- a/fe/view/sidebarRight.html
+++ b/fe/view/sidebarRight.html
@@ -2,21 +2,13 @@
   <div class="scrollable-content">
       <div class="list-group" ui-toggle="uiSidebarRight">
 
-          <a class="list-group-item media" href="" ng-repeat="user in chatUsers">
+          <a class="list-group-item media" href="" ng-repeat="coach in coachs">
               <div class="pull-left">
                   <i class="fa fa-user chat-user-avatar"></i>
               </div>
               <div class="media-body">
-                  <h5 class="media-heading">{{user.name}}</h5>
-                  <small ng-switch on="user.online">
-                      <span ng-switch-when="true">
-                          <span class="label label-success">ONLINE</span>
-                      </span>
-                      <span ng-switch-default>
-                          <span class="label label-default"><i>OFFLINE</i>
-                          </span>
-                      </span>
-                  </small>
+                  <h5 class="media-heading">{{coach.name}}</h5>
+                  <input ng-model="coach.stars" type="number" class="rating" min=0 max=5 step=1 data-size="lg" >
               </div>
           </a>
 
