--- a/fe/view/demo.css
+++ b/fe/view/demo.css
@@ -166,3 +166,19 @@ input.scrollable-header {
   opacity: .5;
   transform: scale(1, 1);
 }
+.rating {
+  font-size: 175%;
+  padding: 0 0.5em;
+}
+
+.rating > a {
+  text-decoration: none;
+}
+
+.rating .rating-highlight, .rating.rating-highlight:hover {
+  color: #F4914E;
+}
+
+.rating .rating-normal, .rating.rating-normal:hover {
+  color: #0066CC;
+}
