--- a/fe/view/index.html
+++ b/fe/view/index.html
@@ -51,8 +51,8 @@
           </div>
         </div>
         <div class="btn-group pull-right" ui-yield-to="navbarAction">
-          <div ui-toggle="uiSidebarRight" class="btn sidebar-right-toggle" ng-show="loggedIn"> <!-- -->
-            <i class="fa fa-users"></i> 人员
+          <div ui-toggle="uiSidebarRight" class="btn sidebar-right-toggle" ng-show="loggedIn && !isAdmin"> <!-- -->
+            <i class="fa fa-users"></i> <span ng-hide="isStudent">学员</span><span ng-hide="isCoach">教练</span>
           </div>
         </div>
       </div>
