--- a/fe/view/sidebarRight.html
+++ b/fe/view/sidebarRight.html
@@ -2,15 +2,29 @@
   <div class="scrollable-content">
       <div class="list-group" ui-toggle="uiSidebarRight">
 
-          <a class="list-group-item media" href="" ng-repeat="coach in coachs">
+        <div ng-show="isCoach && loggedIn">
+          <a class="list-group-item media" href="" ng-repeat="stud in students">
               <div class="pull-left">
                   <i class="fa fa-user chat-user-avatar"></i>
               </div>
               <div class="media-body">
-                  <h5 class="media-heading">{{coach.name}}</h5>
-                  <div rating score="coach.rating" max="5" class="pull-left" readonly="false"></div>
+                  <h5 class="media-heading">{{stud.name}}:{{stud.levels}}</h5>
               </div>
           </a>
+        </div>
+
+
+        <div ng-show="isStudent">
+          <a class="list-group-item media" href="" ng-repeat="coach in coachs">
+            <div class="pull-left">
+              <i class="fa fa-user chat-user-avatar"></i>
+            </div>
+            <div class="media-body">
+              <h5 class="media-heading">{{coach.name}}:{{coach.levels}}</h5>
+              <div rating score="coach.rating" max="5" class="pull-left" readonly="false"></div>
+            </div>
+          </a>
+        </div>
 
       </div>
   </div>
