--- a/fe/view/sidebarRight.html
+++ b/fe/view/sidebarRight.html
@@ -14,7 +14,7 @@
         </div>
 
 
-        <div ng-show="isStudent">
+        <div ng-show="isStudent || isAdmin">
           <a class="list-group-item media" href="" ng-repeat="coach in coachs">
             <div class="pull-left">
               <i class="fa fa-user chat-user-avatar"></i>
