--- a/fe/view/biz/student/register.html
+++ b/fe/view/biz/student/register.html
@@ -1,4 +1,4 @@
-<form role="form" ng-submit='adduser()'>
+<form role="form" ng-submit='addstudent()'>
   <fieldset>
     <legend>注册</legend>
     <div class="form-group has-success has-feedback">
