--- a/fe/view/index.html
+++ b/fe/view/index.html
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="/dist/css/mobile-angular-ui-hover.min.css" />
     <link rel="stylesheet" href="/dist/css/mobile-angular-ui-base.min.css" />
     <link rel="stylesheet" href="/dist/css/mobile-angular-ui-desktop.min.css" />
-    <link rel="stylesheet" href="demo.css" />
+    <link rel="stylesheet" href="css/demo.css" />
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.min.js"></script>
     <script src="/dist/js/mobile-angular-ui.min.js"></script>
     <!-- Required to use $touch, $swipe, $drag and $translate services -->
     <script src="/dist/js/mobile-angular-ui.gestures.min.js"></script>
-    <script src="demo.js"></script>
+    <script src="js/demo.js"></script>
   </head>
 
   <body
