--- a/fe/view/biz/adduser.html
+++ b/fe/view/biz/adduser.html
@@ -3,7 +3,7 @@
 </div>
 -->
 <div class="scrollable">
-  <div class="scrollable-content section">
+  <div class="scrollable-content section" ng-controller="AddUserController">
     <ui-shared-state id="activeTab" default="1"></ui-shared-state>
 
     <ul class="nav nav-tabs">
