--- a/fe/view/index.html
+++ b/fe/view/index.html
@@ -19,6 +19,7 @@
     <!-- Required to use $touch, $swipe, $drag and $translate services -->
     <script src="/dist/js/mobile-angular-ui.gestures.min.js"></script>
     <script src="js/demo.js"></script>
+    <script src="js/adduser.js"></script>
   </head>
 
   <body
