--- a/fe/view/index.html
+++ b/fe/view/index.html
@@ -47,13 +47,13 @@
           学车这件事儿
         </div>
         <div class="btn-group pull-left">
-          <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle" ng-show="loggedIn"> <!-- -->
+          <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle" ng-show="loginStatus.loggedIn"> <!-- -->
             <i class="fa fa-bars"></i> 菜单
           </div>
         </div>
         <div class="btn-group pull-right" ui-yield-to="navbarAction">
-          <div ui-toggle="uiSidebarRight" class="btn sidebar-right-toggle" ng-show="loggedIn"> <!-- -->
-            <i class="fa fa-users"></i> <span ng-hide="isStudent || isAdmin">学员</span><span ng-hide="isCoach">教练</span>
+          <div ui-toggle="uiSidebarRight" class="btn sidebar-right-toggle" ng-show="loginStatus.loggedIn"> <!-- -->
+            <i class="fa fa-users"></i> <span ng-hide="loginStatus.isStudent || loginStatus.isAdmin">学员</span><span ng-hide="loginStatus.isCoach">教练</span>
           </div>
         </div>
       </div>
@@ -61,8 +61,8 @@
       <div class="navbar navbar-app navbar-absolute-bottom">
 	    <div class="btn-group justified">
             <a href="#/home" class="btn btn-navbar btn-icon-only"><i class="fa fa-home fa-navbar"></i></a>
-            <a href="#/adduser" class="btn btn-navbar btn-icon-only" ng-click="userplus()" ng-hide="loggedIn"><i class="fa fa-user-plus fa-navbar"></i></a>
-            <a class="btn btn-navbar btn-icon-only" ng-click="logout()" ng-show="loggedIn"><i class="fa fa-sign-out fa-navbar"></i></a>
+            <a href="#/adduser" class="btn btn-navbar btn-icon-only" ng-click="userplus()" ng-hide="loginStatus.loggedIn"><i class="fa fa-user-plus fa-navbar"></i></a>
+            <a class="btn btn-navbar btn-icon-only" ng-click="logout()" ng-show="loginStatus.loggedIn"><i class="fa fa-sign-out fa-navbar"></i></a>
         </div>
 		<!--
         <div class="btn-group justified">
