--- a/fe/view/sidebarRight.html
+++ b/fe/view/sidebarRight.html
@@ -2,7 +2,7 @@
   <div class="scrollable-content">
       <div class="list-group" ui-toggle="uiSidebarRight">
 
-        <div ng-show="isCoach && loggedIn">
+        <div ng-show="loginStatus.isCoach && loginStatus.loggedIn">
           <a class="list-group-item media" href="" ng-repeat="stud in students">
               <div class="pull-left">
                   <i class="fa fa-user chat-user-avatar"></i>
@@ -14,7 +14,7 @@
         </div>
 
 
-        <div ng-show="isStudent || isAdmin">
+        <div ng-show="loginStatus.isStudent || loginStatus.isAdmin">
           <a class="list-group-item media" href="" ng-repeat="coach in coachs">
             <div class="pull-left">
               <i class="fa fa-user chat-user-avatar"></i>
