--- a/fe/view/index.html
+++ b/fe/view/index.html
@@ -20,6 +20,7 @@
     <script src="/dist/js/mobile-angular-ui.gestures.min.js"></script>
     <script src="js/demo.js"></script>
     <script src="js/adduser.js"></script>
+    <script src="js/netRequestService.js"></script>
   </head>
 
   <body
