--- a/fe/view/biz/login.html
+++ b/fe/view/biz/login.html
@@ -11,7 +11,7 @@
         <div class="form-group has-success has-feedback">
           <label>手机</label>
           <input type="tel"
-                 ng-model="loginInfo.telephone"
+                 ng-model="loginInfo.phonenum"
                  class="form-control"
                  placeholder="Telephone">
         </div>
