--- a/fe/view/index.html
+++ b/fe/view/index.html
@@ -20,6 +20,7 @@
     <script src="/dist/js/mobile-angular-ui.gestures.min.js"></script>
     <script src="js/demo.js"></script>
     <script src="js/adduser.js"></script>
+    <script src="js/login.js"></script>
     <script src="js/netRequestService.js"></script>
   </head>
 
@@ -54,7 +55,7 @@
         </div>
         <div class="btn-group pull-right" ui-yield-to="navbarAction">
           <div ui-toggle="uiSidebarRight" class="btn sidebar-right-toggle" ng-show="loginStatus.loggedIn"> <!-- -->
-            <i class="fa fa-users"></i> <span ng-hide="loginStatus.isStudent || loginStatus.isAdmin">学员</span><span ng-hide="loginStatus.isCoach">教练</span>
+            <i class="fa fa-users"></i> <span ng-hide="loginStatus.isStudent">学员</span><span ng-hide="loginStatus.isCoach">教练</span>
           </div>
         </div>
       </div>
