--- a/fe/view/index.html
+++ b/fe/view/index.html
@@ -21,6 +21,7 @@
     <script src="js/demo.js"></script>
     <script src="js/adduser.js"></script>
     <script src="js/login.js"></script>
+    <script src="js/schedule.js"></script>
     <script src="js/netRequestService.js"></script>
   </head>
 
