--- a/fe/view/index.html
+++ b/fe/view/index.html
@@ -55,8 +55,8 @@
           </div>
         </div>
         <div class="btn-group pull-right" ui-yield-to="navbarAction">
-          <div ui-toggle="uiSidebarRight" class="btn sidebar-right-toggle" ng-show="loginStatus.loggedIn"> <!-- -->
-            <i class="fa fa-users"></i> <span ng-hide="loginStatus.isStudent">学员</span><span ng-hide="loginStatus.isCoach">教练</span>
+          <div ui-toggle="uiSidebarRight" class="btn sidebar-right-toggle"> <!-- -->
+            <i class="fa fa-users"></i> <span ng-show="loginStatus.isCoach">学员</span><span ng-hide="loginStatus.isCoach">教练</span>
           </div>
         </div>
       </div>
