--- a/fe/view/sidebarRight.html
+++ b/fe/view/sidebarRight.html
@@ -8,20 +8,22 @@
                   <i class="fa fa-user chat-user-avatar"></i>
               </div>
               <div class="media-body">
-                  <h5 class="media-heading">{{stud.name}}:{{stud.levels}}</h5>
+                <h5 class="media-heading">{{stud.name}}</h5>
+                <span>{{stud.levelId}}</span>
               </div>
           </a>
         </div>
 
 
-        <div ng-show="loginStatus.isStudent">
+        <div ng-hide="loginStatus.isCoach">
           <a class="list-group-item media" href="" ng-repeat="coach in coachs">
             <div class="pull-left">
               <i class="fa fa-user chat-user-avatar"></i>
             </div>
             <div class="media-body">
-              <h5 class="media-heading">{{coach.name}}:{{coach.levels}}</h5>
-              <div rating score="coach.rating" max="5" class="pull-left" readonly="false"></div>
+              <h5 class="media-heading">{{coach.name}}</h5>
+              <span>{{coach.levelId}}</span>
+              <!--<div rating score="coach.rating" max="5" class="pull-left" readonly="false"></div>-->
             </div>
           </a>
         </div>
