--- a/fe/view/index.html
+++ b/fe/view/index.html
@@ -22,6 +22,7 @@
     <script src="js/adduser.js"></script>
     <script src="js/login.js"></script>
     <script src="js/schedule.js"></script>
+    <script src="js/order.js"></script>
     <script src="js/netRequestService.js"></script>
   </head>
 
