--- a/fe/view/biz/student/order.html
+++ b/fe/view/biz/student/order.html
@@ -14,7 +14,7 @@
           <!--<button class="btn" ng-click="work(schedule)">-->
           <!--<span class="glyphicon glyphicon-pencil"></span>&nbsp;&nbsp;上班/休息-->
           <!--</button>-->
-          <a ng-show="order.canOrder" ng-click="switchOrder(order)">
+          <a ng-click="switchOrder(order)">
             <ui-switch ng-model="order.hasOrdered" ng-disabled="!order.canOrder"></ui-switch>
           </a>
         </td>
